# 3cc

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  build.sh  codegen.cpp  codegen.h  lexer.l  main.cpp  parser.y  symtab.cpp  symtab.h
test/: test.sh
